--- a/20160121_全日制第三周第三天/index.html
+++ b/20160121_全日制第三周第三天/index.html
@@ -168,7 +168,7 @@
             curImg.style.filter = "alpha(opacity=" + count * 100 + ")";
         }, 10);
     }
-
+    // window.onload = init;
     window.setTimeout(init, 500);//->开始加载页面的时候,我隔500ms后把第一屏幕的显示出来的5张图片先加载了
     window.onscroll = init;//->当页面滚动的时候,在把下面屏里面符合条件的加载了
 </script>
